coba ubah pengantar

--- a/docs/01_pengantar/01.md
+++ b/docs/01_pengantar/01.md
@@ -1,4 +1,4 @@
-# 01 - Hello World
+# 01 - Pengantar
 
 ## Tujuan Pembelajaran
 
@@ -10,3 +10,5 @@
 (Lampirkan screenshot hasil praktik di sini selengkap mungkin sesuai tujuan pembelajaran yang ingin dicapai)
 
 ![contoh gambar](img/polinema.png)
+
+[contoh link](../../src/01_pengantar/hello.js)
