--- a/docs/01_pengantar/01.md
+++ b/docs/01_pengantar/01.md
@@ -2,13 +2,142 @@
 
 ## Tujuan Pembelajaran
 
-1. (bisa copy dari RPS kolom sub-CP-MK)
-2. dst
+1. Mahasiswa dapat memahami konsep modern javascript
+2. Mahasiswa dapat membuat variabel dan parameter lain di javascript
 
 ## Hasil Praktikum
 
-(Lampirkan screenshot hasil praktik di sini selengkap mungkin sesuai tujuan pembelajaran yang ingin dicapai)
+## Praktikum 1
 
-![contoh gambar](img/polinema.png)
+### Listing 1-1
 
-[contoh link](../../src/01_pengantar/hello.js)
+![contoh gambar](img/listing/listing1-1.png)
+
+[Kode Program LIsting 1-1](../../src/01_pengantar/listing1-1/listing1_1.js)
+
+### Listing 1-2
+
+![contoh gambar](img/listing/listing1-2.png)
+
+[Kode Program LIsting 1-2](../../src/01_pengantar/listing1-2/listing1_2.js)
+
+### Listing 1-3
+
+![contoh gambar](img/listing/listing1-3.png)
+
+[Kode Program LIsting 1-3](../../src/01_pengantar/listing1-3/listing1_3.js)
+
+### Listing 1-4
+
+![contoh gambar](img/listing/listing1-4.png)
+
+[Kode Program LIsting 1-4](../../src/01_pengantar/listing1-4/listing1_4.js)
+
+### Listing 1-5
+
+![contoh gambar](img/listing/listing1-5.png)
+
+[Kode Program LIsting 1-5](../../src/01_pengantar/listing1-5/listing1_5.js)
+
+### Listing 1-6
+
+![contoh gambar](img/listing/listing1-6.png)
+
+[Kode Program LIsting 1-6](../../src/01_pengantar/listing1-6/listing1_6.js)
+
+### Listing 1-7
+
+![contoh gambar](img/listing/listing1-7.png)
+
+[Kode Program LIsting 1-7](../../src/01_pengantar/listing1-7/listing1_7.js)
+
+### Listing 1-8
+
+![contoh gambar](img/listing/listing1-8.png)
+
+[Kode Program LIsting 1-8](../../src/01_pengantar/listing1-8/listing1_8.js)
+
+### Listing 1-9
+
+![contoh gambar](img/listing/listing1-9.png)
+
+[Kode Program LIsting 1-9](../../src/01_pengantar/listing1-9/listing1_9.js)
+
+### Listing 1-10
+
+![contoh gambar](img/listing/listing1-10.png)
+
+[Kode Program LIsting 1-10](../../src/01_pengantar/listing1-10/listing1_10.js)
+
+### Listing 1-11
+
+![contoh gambar](img/listing/listing1-11.png)
+
+[Kode Program LIsting 1-11](../../src/01_pengantar/listing1-11/listing1_11.js)
+
+### Listing 1-12
+
+![contoh gambar](img/listing/listing1-12.png)
+
+[Kode Program LIsting 1-12](../../src/01_pengantar/listing1-12/listing1_12.js)
+
+### Listing 1-13
+
+![contoh gambar](img/listing/listing1-13.png)
+
+[Kode Program LIsting 1-13](../../src/01_pengantar/listing1-13/listing1_13.js)
+
+### Listing 1-14
+
+![contoh gambar](img/listing/listing1-14.png)
+
+[Kode Program LIsting 1-14](../../src/01_pengantar/listing1-14/listing1_14.js)
+
+### Listing 1-15
+
+![contoh gambar](img/listing/listing1-15.png)
+
+[Kode Program LIsting 1-15](../../src/01_pengantar/listing1-15/listing1_15.js)
+
+### Listing 1-16
+
+![contoh gambar](img/listing/listing1-16.png)
+
+[Kode Program LIsting 1-16](../../src/01_pengantar/listing1-16/listing1_16.js)
+
+### Listing 1-17
+
+![contoh gambar](img/listing/listing1-17.png)
+
+[Kode Program LIsting 1-17](../../src/01_pengantar/listing1-17/listing1_17.js)
+
+### Listing 1-18
+
+![contoh gambar](img/listing/listing1-18.png)
+
+[Kode Program LIsting 1-18](../../src/01_pengantar/listing1-18/listing1_18.js)
+
+### Listing 1-19
+
+![contoh gambar](img/listing/listing1-19.png)
+
+[Kode Program LIsting 1-19](../../src/01_pengantar/listing1-19/listing1_19.js)
+
+### Listing 1-20
+
+![contoh gambar](img/listing/listing1-20.png)
+
+[Kode Program LIsting 1-20](../../src/01_pengantar/listing1-20/listing1_20.js)
+
+### Listing 1-21
+
+![contoh gambar](img/listing/listing1-21.png)
+
+[Kode Program LIsting 1-21](../../src/01_pengantar/listing1-21/listing1_21.js)
+
+### Listing 1-22
+
+![contoh gambar](img/listing/listing1-22.png)
+
+[Kode Program LIsting 1-22](../../src/01_pengantar/listing1-22/listing1_22.js)
+
