10_Firebase_dan_ReactJs

--- a/docs/10_Firebase_Reactjs/10.md
+++ b/docs/10_Firebase_Reactjs/10.md
@@ -60,5 +60,7 @@ Logged In true
 
 [Kode Program App.css](../../src/10_Firebase_Reactjs/src/App.css)
 
+[Kode Program App.js](../../src/10_Firebase_Reactjs/src/App.js)
+
 [Kode Program firebase.config.js](../../src/10_Firebase_Reactjs/src/firebase.config.js)
 
