--- a/docs/11_Redux_Thunk/11.md
+++ b/docs/11_Redux_Thunk/11.md
@@ -17,19 +17,19 @@
 
 1. Berdasarkan praktikum yang telah Anda lakukan, jelaskan perbedaan fitur yang ada dalam komponen Login dan Home! Mengapa komponen Login tidak menggunakan class seperti pada komponen Home ?
 
-- Jawab : 
+- Jawab : Perbedaanya adalah pada halaman login terdapat fitur isAuthenticated untuk melakukan pengecekan apakah user sudah login atau belum. Sedangkan pada halaman home tidak memiliki fitur tersebut.
 
 2. Jelaskan kegunaan dan alur logika dari protectedRoute.js !
 
-- Jawab : 
+- Jawab : Kegunaanya adalah untuk melakukan pencegahan saat halaman berpindah sebelum login atau logout dilakukan. Alur tersebut dimulai dari verifikasi kemudian melakukan pengecekan otentifikasi. Jika berhasil maka akan terbuka komponen Home yang dituju, namun jika gagal akan kembali pada halaman Login.
 
-3. Coba lakukan login dengan email atau password yang salah, apa yang terjadi? Jelaskan!
+3. Coba lakukan login dengan email atau password yang salah, apa yang terjadi? Jelaskan!.
 
-- Jawab : 
+- Jawab : Kita akan tetap pada halaman Login (tidak berpindah) dan muncul notifikasi " email atau password salah! ".
 
 4. Jika Anda berada di halaman Home, coba akses form login tanpa melakukan logout. Apakah form login bisa diakses? Jelaskan!
 
-- Jawab : 
+- Jawab : Tidak, karena ada alur dari protectedRoute tadi yang melakukan verifikasi data.
 
 5. Tambahkan menu Register pada form login sehingga user yang belum terdaftar dapat melakukan registrasi! Jika registrasi sukses, maka user langsung diarahkan ke halaman Home
 
