--- a/docs/11_Redux_Thunk/11.md
+++ b/docs/11_Redux_Thunk/11.md
@@ -25,7 +25,8 @@
 
 3. Coba lakukan login dengan email atau password yang salah, apa yang terjadi? Jelaskan!.
 
-- Jawab : Kita akan tetap pada halaman Login (tidak berpindah) dan muncul notifikasi " email atau password salah! ".
+- Jawab : Kita akan tetap pada halaman Login (tidak berpindah) dan muncul notifikasi " email atau password salah! ". ![contoh gambar](img/salah.png)
+
 
 4. Jika Anda berada di halaman Home, coba akses form login tanpa melakukan logout. Apakah form login bisa diakses? Jelaskan!
 
@@ -34,6 +35,10 @@
 5. Tambahkan menu Register pada form login sehingga user yang belum terdaftar dapat melakukan registrasi! Jika registrasi sukses, maka user langsung diarahkan ke halaman Home
 
 - Jawab : 
+
+Halaman Login![contoh gambar](img/tugas.png)
+Halaman Register![contoh gambar](img/tugas2.png)
+Halaman Home![contoh gambar](img/tugas3.png)
 
 ## File Project :
 [Kode Program firebase.config.js](../../src/11_Redux_Thunk/src/firebase.config.js)
@@ -49,6 +54,10 @@
 [Kode Program Login.js](../../src/11_Redux_Thunk/src/components/Login.js)
 
 [Kode Program Home.js](../../src/11_Redux_Thunk/src/components/Home.js)
+
+[Kode Program Register.js](../../src/11_Redux_Thunk/src/components/Register.js)
+
+[Kode Program routes.js](../../src/11_Redux_Thunk/src/components/routes.js)
 
 [Kode Program protectedRoute.js](../../src/11_Redux_Thunk/src/routes/protectedRoute.js)
 
