--- a/docs/12_crud_Firebase/12.md
+++ b/docs/12_crud_Firebase/12.md
@@ -9,22 +9,41 @@
 
 ### Praktikum 2 Membuat Fungsi Create Artikel
 
-![LINK GAMBAR 1](img/praktikum2.png)
+![LINK GAMBAR ](img/praktikum2.png)
 
 
 ### Praktikum 3 Membuat Fungsi Hapus Artikel
 
-![LINK GAMBAR 1](img/praktikum3.png)
+![LINK GAMBAR ](img/praktikum3.png)
 
-![LINK GAMBAR 1](img/praktikum3.2.png)
+![LINK GAMBAR ](img/praktikum3.2.png)
 
-<!-- ### Praktikum 4
-![LINK GAMBAR 1](img/praktikum4.jpg)
+### Praktikum 4
+![LINK GAMBAR ](img/praktikum4.png)
 
 # Tugas
 
-![LINK GAMBAR 1](img/tugas1.jpg)
-![LINK GAMBAR 1](img/tugas2.jpg) -->
+1. Berdasarkan praktikum 1 yang telah Anda lakukan, jelaskan perbedaan fungsi locked mode dan test mode pada langkah 3 saat Anda konfigurasi database Firebase?
+2. Buatlah variabel userId pada praktikum 2 langkah 4 agar dapat menyimpan email dari user yang sedang login, sehingga dapat tersimpan di database!
+3. Jelaskan maksud kode ini (dataArtikel || []) pada praktikum 2 langkah 6! Mengapa berbeda dari codelabs sebelumnya untuk menampilkan daftar artikel?
+4. Lengkapilah kode pada praktikum 4 langkah 5 agar dapat melakukan update artikel! Mengapa setelah klik tombol Update Artikel, form Modal tidak hilang? Bagaimana Anda mengatasi hal tersebut?
+5. Ketika Anda menekan tombol Edit, lalu menekan tombol Batal pada form Modal update artikel. Kemudian coba tambah artikel baru, maka artikel yang tadi kita klik tombol Edit akan berubah jadi data yang artikel baru ditambahkan. Mengapa demikian? Silakan diperbaiki.
 
+*Jawaban :*
 
-File Project : [Source Code](../../src/12_crud_firebase/src)
+1. Perbedaan fungsi locked mode dan test mode adalah pada penulisan dan pembacaan data. Ketika masuk locked mode, maka data tidak akan bisa diakses karena pada pengaturannya diatur 'false' dan pada test mode, data bisa diakses dan diolah.
+
+2. Isi pada userId diubah menjadi `firebase.auth().currentUser.email`
+![Hasil ](img/2.png)
+
+3. Perintah tersebut berfungsi untuk menampilkan map data dalam bentuk array maupun object. Pada codelabs sebelumnya tidak seperti itu karena data yang diambil hanya berbentuk object.
+
+4. Karena pada showEdit tidak diubah menjadi false, sehingga modal tidak menghilang.
+![Ubah Show Edit](img/handleTombolArtikel.png)
+
+5. Karena pada onSubmit form modal dapat memanggil fungsi ' handleTombolSimpan ', yang mana data baru  dapat tersimpan.
+<br></br>
+Perbaikan :
+![Ubah Show Edit](img/5.png)
+
+File Project : [Source Code BlogPost.js ](../../src/12_crud_firebase/src/components/BlogPost.js)
