--- a/docs/12_crud_Firebase/12.md
+++ b/docs/12_crud_Firebase/12.md
@@ -46,4 +46,4 @@
 Perbaikan :
 ![Ubah Show Edit](img/5.png)
 
-File Project : [Source Code BlogPost.js ](../../src/12_crud_firebase/src/components/BlogPost.js)
+[Kode Program BlogPost.js](../../src/12_crud_Firebase/src/components/BlogPost.js)
