13-Pengenalan_Quasar_Framework

--- a/docs/13_Pengenalan_Quasar_Framework/13.md
+++ b/docs/13_Pengenalan_Quasar_Framework/13.md
@@ -33,24 +33,26 @@
 
 *Jawaban :*
 
-1. Fungsinya adalah untuk mengekspor fungsi yang mengambil parameter (konteks) dan mengambil Object.
+1. Fungsinya adalah untuk menyimpan konfigurasi mengenai project yang akan dibuat.
 
 2. Penjelasan istilah SPA, SSR, PWA, BEX, Electron app, Cordova, dan Linting code : 
 <br></br>
-SPA : Untuk menggunakan pengambilan klien PWA(yang merupakan kombo pembunuh), mode PWA Quasar CLI akan diinstal juga.
+SPA : Website yang menggunakan 1 halaman saja sebagai tampilan pada aplikasinya.
 <br></br>
-PWA : Untuk memuat font saat membangun untuk mode tertentu dan memilih yang lain.
+SSR : Teknik yang digunakan dalam pengembangan web yang melibatkan penggunaan script pada serevr web yang menghassilkan response yang disesuaikan untuk permintaan setiap pengguna ke situs web.
 <br></br>
-BEX :
+PWA : Sebuah aplikasi web yang menggunakan beberapa teknologi modern yang membuat user experience seperti menggunakan Native App.
 <br></br>
-Electron app : Untuk mengembangkan dan membangun Aplikasi Elektron.
+BEX : Sebuah aplikasi dalam ekstensi web yang digunakan untuk menyesuaikan web browser dengan beberapa cara.
 <br></br>
-Cordava : Untuk menghindari memuat file tersebut untuk mode lainnya.
+Electron app : Framework yang digunakan untuk membangun aplikasi berbasis dekstop (dapat dijalankan dengan semua sistem operasi).
 <br></br>
-Linting code :
+Cordava : Framework yang digunakan untuk mengembangkan aplikasi mbile.
+<br></br>
+Linting code : Proses pengecekan code kesalahan program dan style program.
 
 
-3.
+3. Revisi yang kedua untuk javascript, ECMAScript 6 juga dikenal dengan sebutan ES6 atau ECMAScript2015. Jadi, cara menyebutnya saja yang berbeda.
 
 
 [Kode Program Index.vue](../../src/13_Pengenalan_Quasar_Framework/src/pages/Index.vue)
